correction contrast

--- a/assets/style.css
+++ b/assets/style.css
@@ -101,7 +101,7 @@ nav a {
 	justify-content: center;
 }
 .nav-pills .nav-link.actived, .nav-pills .show > .nav-link {
-	color: #fff;
+	color: #1C1C1C;
 	background-color: #BEB45A;
 	border-radius:0 ;
 }
